Update sbt build config and project main class