@@ -5,10 +5,9 @@ version := "0.1"
 scalaVersion := "2.13.1"
 
 lazy val roasterVersion = "2.21.1.Final"
-lazy val javaVersionRequired = "13"
+lazy val javaVersionRequired = "1.8"
 
-javacOptions ++= Seq("--enable-preview", "-source", javaVersionRequired)
-javaOptions += "--enable-preview"
+javacOptions ++= Seq("-source", javaVersionRequired)
 
 initialize := {
     val _ = initialize.value
@@ -19,19 +18,31 @@ initialize := {
 
 fork := true
 
+//assemblyMergeStrategy in assembly := {
+//    case PathList(ps @ _*) if ps.last endsWith ".Named" => MergeStrategy.first
+//    case "META-INF/MANIFEST.MF"                         => MergeStrategy.discard
+//    case x => MergeStrategy.last
+//}
+//assemblyOption in assembly := (assemblyOption in assembly).value.copy(cacheOutput = false)
+
 libraryDependencies ++= Seq(
     // https://mvnrepository.com/artifact/org.jboss.forge.roaster/roaster-api
-    "org.jboss.forge.roaster"   % "roaster-api"                         % roasterVersion,
+    "org.jboss.forge.roaster"   %   "roaster-api"                         % roasterVersion,
     // https://mvnrepository.com/artifact/org.jboss.forge.roaster/roaster-jdt
-    "org.jboss.forge.roaster"   % "roaster-jdt"                         % roasterVersion,
+    "org.jboss.forge.roaster"   %   "roaster-jdt"                         % roasterVersion      % "runtime",
+    // https://mvnrepository.com/artifact/org.apache.maven/maven-embedder
+    "org.apache.maven.shared"   % "maven-invoker"                         % "3.0.1",
 
+    // https://mvnrepository.com/artifact/info.picocli/picocli
+    "info.picocli"              %   "picocli"                             % "4.2.0",
     // https://mvnrepository.com/artifact/com.typesafe/config
-    "com.typesafe"              % "config"                              % "1.4.0",
+    "com.typesafe"              %   "config"                              % "1.4.0",
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
-    "ch.qos.logback"            % "logback-classic"                     % "1.3.0-alpha5",
+    "ch.qos.logback"            %   "logback-classic"                     % "1.2.3",
 
     // test dependencies
-    // https://mvnrepository.com/artifact/junit/junit
-    "junit"                     % "junit"                               % "4.13"            % "test")
+    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
+    "org.junit.jupiter"         %   "junit-jupiter-engine"                % "5.6.0"             % "test")
 
 mainClass in (Compile, run) := Some("com.ashessin.cs474.hw1.Main")
+mainClass in (Compile, packageBin) := Some("com.ashessin.cs474.hw1.Main")
